# ai-model-router

./: README.md  pyproject.toml
config/: capabilities.yaml  models.yaml  task_profiles.yaml
examples/: direct_route_example.py  direct_select_example.py  usage_example.py
src/ai_model_router/: __init__.py  config_loader.py  models.py  router.py  selector.py
src/ai_model_router.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ai_model_router/intent/: __init__.py  heuristics.py  models.py  resolver.py  semantic_matcher.py
src/ai_model_selector/: __init__.py  config_loader.py  models.py  selector.py
src/ai_model_selector/intent/: heuristics.py  resolver.py  semantic_matcher.py
tests/: test_intent.py  test_router.py  test_selector.py
